--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.3.7",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "react-redux": "5.0.5"
   },
   "devDependencies": {
+    "eslint-plugin-react": "^7.0.1",
     "prettier": "^1.3.1",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "redux-immutable-state-invariant": "2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
