--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "5.0.5",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
-    "react-redux": "5.0.5"
+    "redux-thunk": "^2.2.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "eslint-plugin-react": "^7.0.1",
