--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint src",
     "prebuild": "rimraf dist",
     "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js",
-    "postbuild": "copyfiles -u 1 public/*.* dist"
+    "postbuild": "copyfiles -u 1 public/*.* dist | copyfiles index.html dist"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
