--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,6 +2,7 @@ env:
   browser: true
   commonjs: true
   es6: true
+  node: true
 extends: ["eslint:recommended", "plugin:react/recommended"]
 parserOptions:
   ecmaFeatures:
@@ -11,9 +12,6 @@ parserOptions:
 plugins:
   - react
 rules:
-  indent:
-    - error
-    - 2
   linebreak-style:
     - error
     - unix
